--- a/main.html
+++ b/main.html
@@ -11,33 +11,44 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<h2 class="header">Shaw's News</h2>
+	 <header class="header">
+        <h2>Shaw's News</h2>
+    </header>
 	
-	<div class="container">
+ <div class="container">
 
-		<div class="latest-news-section">
-			<h3>Latest News Articles</h3>
-			<ul>
-				<li>Article 1</li>
-				<li>Article 2</li>
-				<li>Article 3</li>
-			</ul>
-		</div>
+        <!-- Latest News Section -->
+        <div class="latest-news-section">
+            <h3>Latest News Articles</h3>
+            <ul>
+                <li>Article 1</li>
+                <li>Article 2</li>
+                <li>Article 3</li>
+            </ul>
+        </div>
 
-		<div class="main">
-			<h3>Main Article</h3>
-			<p>Lorem ipsum dolor sit amet consectetur adipiscing elit sed do eiusmod tempor incididunt ut labore et dolore magna aliqua ut enim ad minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
-		</div>
+        <!-- Main Article -->
+        <div class="main-article">
+            <h2>Main Article</h2>
+            <p>
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. 
+                Sed auctor, magna eu fringilla malesuada, ipsum risus eleifend est, 
+                non feugiat quam augue euismod eros. Sed malesuada, magna eu fringilla malesuada, 
+                ipsum risus eleifend est, non feugiat quam augue euismod eros.
+            </p>
+        </div>
 
-		<div class="pictorial-news-section">
-			<h3>Pictorial News</h3>
-			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg">
-			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG">
-			<img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG">
-		</div>
-		
-		
-	</div>
+        <!-- Pictorial News Section -->
+        <div class="pictorial-news-section">
+            <h3>Pictorial News</h3>
+
+            <!-- Replace these with actual image paths -->
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/delhi_rains_1674974112847_1674981888135_1674981888135.jpeg" alt="Image One">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/ADANI-INDIA-GAUTAM-ADANI-0_1675011651023_1675011651023_1675011672003_1675011672003.JPG" alt="Image Two">
+            <img src="https://images.hindustantimes.com/img/2023/01/29/550x309/FRANCE-REFORM-PENSIONS-31_1675022359706_1675022359706_1675022383851_1675022383851.JPG" alt="Image Three">
+        </div>
+
+    </div>
 
 </body>
 
